...
    var years by mutableStateOf("")
    var months by mutableStateOf("")
    var days by mutableStateOf("")
    var gender by mutableStateOf("")

    val daysList = (1..31).toList()
    val monthsList = listOf("January", "February", "March", "April", "May", "June",
                        "July", "August", "September", "October", "November", "December")

    val yearsList = (1920..2023).toList()

    var isNameValid by mutableStateOf(false)
    var isEmailValid by mutableStateOf(false)
    var isPhoneValid by mutableStateOf(false)
...
