package com.latticeonfhir.android.ui

import androidx.compose.ui.test.*
import androidx.test.ext.junit.runners.AndroidJUnit4
import org.junit.FixMethodOrder
import org.junit.Test
import org.junit.runner.RunWith
import org.junit.runners.MethodSorters

@FixMethodOrder(MethodSorters.NAME_ASCENDING)
@RunWith(AndroidJUnit4::class)
class PatientRegistrationKtTest: UiTestsBase() {
    @Test
    fun aaaa_login(){
        composeTestRule.onNode(inputField).performTextInput("9876543210")
        composeTestRule.onNode(button).performClick()
        Thread.sleep(2000)
        composeTestRule.onNode(firstDigit).performTextInput("2")
        composeTestRule.onNode(secondDigit).performTextInput("2")
        composeTestRule.onNode(thirdDigit).performTextInput("2")
        composeTestRule.onNode(fourDigit).performTextInput("2")
        composeTestRule.onNode(fiveDigit).performTextInput("2")
        composeTestRule.onNode(sixDigit).performTextInput("2")
        composeTestRule.onNode(button).performClick()
        Thread.sleep(2000)
    }

    // Patient Registration Step 1 Tests
    @Test
    fun patientRegistrationStepOne_verify_if_all_views_exists() {
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(titlePatientRegistration).assertExists("Title should be \"Patient Registration\".")
        composeTestRule.onNode(clearIcon, useUnmergedTree = true)
            .assertExists("Clear icon  should be displayed.")
        composeTestRule.onNode(backIcon, useUnmergedTree = true).assertDoesNotExist()
        composeTestRule.onNodeWithText("Basic Information").assertExists()
        composeTestRule.onNodeWithText("Page 1/3").assertExists()
        composeTestRule.onNode(firstName)
            .assertExists("First Name input field should be displayed.")
        composeTestRule.onNode(middleName)
            .assertExists("Middle Name input field should be displayed.")
        composeTestRule.onNode(lastName).assertExists("Last Name input field should be displayed.")
        composeTestRule.onNode(phoneNo)
            .assertExists("Phone number input field should be displayed.")
        composeTestRule.onNode(email).assertExists("Email input field should be displayed.")
        composeTestRule.onNode(dobChip).assertExists("DOB selection chip should be displayed.")
        composeTestRule.onNode(dobChip).assertIsSelected()
        composeTestRule.onNode(year)
            .assertExists("Year input field should be displayed by default.")
        composeTestRule.onNode(month)
            .assertExists("Month input field should be displayed by default.")
        composeTestRule.onNode(day).assertExists("Day input field should be displayed by default.")
        composeTestRule.onNode(ageChip).assertExists("Age selection chip should be displayed.")
        composeTestRule.onNode(femaleChip)
            .assertExists("Female gender selection chip should be displayed.")
        composeTestRule.onNode(maleChip)
            .assertExists("Male gender selection chip should be displayed.")
        composeTestRule.onNode(othersChip)
            .assertExists("Others gender selection chip should be displayed.")
        composeTestRule.onNode(nextBtn).assertExists("Next button should be displayed.")
            .assertIsNotEnabled()
    }

    @Test
    fun patientRegistrationStepOne_dob_selected() {
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(dobChip).performClick()
        composeTestRule.onNode(dobChip).assertIsSelected()
        composeTestRule.onNode(ageChip).assertIsNotSelected()
        composeTestRule.onNode(year).assertExists("Year input field should be displayed.")
        composeTestRule.onNode(month).assertExists("Month input field should be displayed.")
        composeTestRule.onNode(day).assertExists("Day input field should be displayed.")
        composeTestRule.onNode(years).assertDoesNotExist()
        composeTestRule.onNode(months).assertDoesNotExist()
        composeTestRule.onNode(days).assertDoesNotExist()
    }

    @Test
    fun patientRegistrationStepOne_age_selected() {
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(ageChip).performClick()
        composeTestRule.onNode(ageChip).assertIsSelected()
        composeTestRule.onNode(dobChip).assertIsNotSelected()
        composeTestRule.onNode(years).assertExists("Years input field should be displayed.")
        composeTestRule.onNode(months).assertExists("Months input field should be displayed.")
        composeTestRule.onNode(days).assertExists("Days input field should be displayed.")
        composeTestRule.onNode(year).assertDoesNotExist()
        composeTestRule.onNode(month).assertDoesNotExist()
        composeTestRule.onNode(day).assertDoesNotExist()
    }

    @Test
    fun patientRegistrationStepOne_next_btn_enabled_on_valid_inputs() {
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(firstName).performTextInput("mansi")
        composeTestRule.onNode(firstName).performImeAction()
        composeTestRule.onNode(middleName).performImeAction()
        composeTestRule.onNode(lastName).performImeAction()
        composeTestRule.onNode(day).performTextInput("23")
        composeTestRule.onNode(month).performClick()
        composeTestRule.onNodeWithText("January").performClick()
        composeTestRule.onNode(year).performTextInput("2001")
        composeTestRule.onNode(phoneNo).performTextInput("9876543210")
        composeTestRule.onNode(phoneNo).performImeAction()
        composeTestRule.onNodeWithTag("columnLayout").performScrollToNode(hasTestTag("genderRow"))
        composeTestRule.onNode(femaleChip).performClick()
        composeTestRule.onNode(femaleChip).assertIsSelected()
        composeTestRule.onNode(nextBtn).assertIsEnabled()
    }

    @Test
    fun patientRegistrationStepOne_next_btn_disabled_and_error_msg_on_invalid_firstName_less_than_3() {
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(firstName).performTextInput("ma")
        composeTestRule.onNode(firstName).performImeAction()
        composeTestRule.onNode(middleName).performImeAction()
        composeTestRule.onNode(lastName).performImeAction()
        composeTestRule.onNode(day).performTextInput("23")
        composeTestRule.onNode(month).performClick()
        composeTestRule.onNodeWithText("January").performClick()
        composeTestRule.onNode(year).performTextInput("2001")
        composeTestRule.onNode(phoneNo).performTextInput("9876543210")
        composeTestRule.onNode(phoneNo).performImeAction()
        composeTestRule.onNodeWithTag("columnLayout").performScrollToNode(hasTestTag("genderRow"))
        composeTestRule.onNode(femaleChip).performClick()
        composeTestRule.onNode(femaleChip).assertIsSelected()
        composeTestRule.onNode(firstName).assertTextEquals("ma", "First Name", "Name length should be between 3 and 100.", includeEditableText = true)
        composeTestRule.onNode(nextBtn).assertIsNotEnabled()
    }

    @Test
    fun patientRegistrationStepOne_next_btn_disabled_and_error_msg_on_invalid_firstName_more_than_100() {
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(firstName).performTextInput("abcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvw")
        composeTestRule.onNode(firstName).assertTextEquals("", "First Name", includeEditableText = true)
        composeTestRule.onNode(nextBtn).assertIsNotEnabled()
    }

    @Test
    fun patientRegistrationStepOne_check_if_first_name_value_counter_displayed(){
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(firstName).performTextInput("a")
        composeTestRule.onNode(firstNameLength).assertIsDisplayed()
        composeTestRule.onNode(firstNameLength).assertTextEquals("1/100")
        composeTestRule.onNode(firstName).performTextInput("abcdefghijklmnopqrst")
        composeTestRule.onNode(firstNameLength).assertTextEquals("20/100")
    }

    @Test
    fun patientRegistrationStepOne_check_error_states_of_middle_name(){
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(middleName).assertTextEquals("Middle Name", "")
        composeTestRule.onNode(middleName).performTextInput("a")
        composeTestRule.onNode(middleName).assertTextEquals("Middle Name", "a")
        composeTestRule.onNode(middleName).performTextClearance()
        composeTestRule.onNode(middleName).performTextInput("abcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvw")
        composeTestRule.onNode(middleName).assertTextEquals("", "Middle Name")
    }

    @Test
    fun patientRegistrationStepOne_check_middle_name_length_counter(){
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(middleName).performTextInput("abcde")
        composeTestRule.onNode(middleNameLength).assertTextEquals("5/100")
        composeTestRule.onNode(middleName).performTextClearance()
        composeTestRule.onNode(middleName).performTextInput("abcdefghijklmno")
        composeTestRule.onNode(middleNameLength).assertTextEquals("15/100")
    }

    @Test
    fun patientRegistrationStepOne_check_error_states_of_last_name(){
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(lastName).assertTextEquals("Last Name", "")
        composeTestRule.onNode(lastName).performTextInput("a")
        composeTestRule.onNode(lastName).assertTextEquals("Last Name", "a")
        composeTestRule.onNode(lastName).performTextClearance()
        composeTestRule.onNode(lastName).performTextInput("abcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvw")
        composeTestRule.onNode(lastName).assertTextEquals("", "Last Name")
    }

    @Test
    fun patientRegistrationStepOne_check_last_name_length_counter(){
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(lastName).performTextInput("abcdefghij")
        composeTestRule.onNode(lastNameLength).assertTextEquals("10/100")
        composeTestRule.onNode(lastName).performTextClearance()
        composeTestRule.onNode(lastName).performTextInput("abcdefghijklmnoabcdefghijklmno")
        composeTestRule.onNode(lastNameLength).assertTextEquals("30/100")
    }

    @Test
    fun patientRegistrationStepOne_next_btn_disabled_on_invalid_phoneNo() {
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(firstName).performTextInput("mansi")
        composeTestRule.onNode(firstName).performImeAction()
        composeTestRule.onNode(middleName).performImeAction()
        composeTestRule.onNode(lastName).performImeAction()
        composeTestRule.onNode(day).performTextInput("23")
        composeTestRule.onNode(month).performClick()
        composeTestRule.onNodeWithText("January").performClick()
        composeTestRule.onNode(year).performTextInput("2001")
        composeTestRule.onNode(phoneNo).performTextInput("987654320")
        composeTestRule.onNode(phoneNo).performImeAction()
        composeTestRule.onNodeWithTag("columnLayout").performScrollToNode(hasTestTag("genderRow"))
        composeTestRule.onNode(femaleChip).performClick()
        composeTestRule.onNode(femaleChip).assertIsSelected()
        composeTestRule.onNode(nextBtn).assertIsNotEnabled()
    }

    @Test
    fun patientRegistrationStepOne_next_btn_disabled_on_invalid_email() {
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(firstName).performTextInput("mansi")
        composeTestRule.onNode(firstName).performImeAction()
        composeTestRule.onNode(middleName).performImeAction()
        composeTestRule.onNode(lastName).performImeAction()
        composeTestRule.onNode(day).performTextInput("23")
        composeTestRule.onNode(month).performClick()
        composeTestRule.onNodeWithText("January").performClick()
        composeTestRule.onNode(year).performTextInput("2001")
        composeTestRule.onNode(phoneNo).performTextInput("9876543210")
        composeTestRule.onNode(phoneNo).performImeAction()
        composeTestRule.onNode(email).performTextInput("mansi373476.com")
        composeTestRule.onNode(email).performImeAction()
        composeTestRule.onNodeWithTag("columnLayout").performScrollToNode(hasTestTag("genderRow"))
        composeTestRule.onNode(femaleChip).performClick()
        composeTestRule.onNode(femaleChip).assertIsSelected()
        composeTestRule.onNode(nextBtn).assertIsNotEnabled()
    }

    @Test
    fun patientRegistrationStepOne_verify_next_button_click() {
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(firstName).performTextInput("mansi")
        composeTestRule.onNode(firstName).performImeAction()
        composeTestRule.onNode(middleName).performImeAction()
        composeTestRule.onNode(lastName).performImeAction()
        composeTestRule.onNode(day).performTextInput("23")
        composeTestRule.onNode(month).performClick()
        composeTestRule.onNodeWithText("January").performClick()
        composeTestRule.onNode(year).performTextInput("2001")
        composeTestRule.onNode(phoneNo).performTextInput("9876543210")
        composeTestRule.onNode(phoneNo).performImeAction()
        composeTestRule.onNodeWithTag("columnLayout").performScrollToNode(hasTestTag("genderRow"))
        composeTestRule.onNode(femaleChip).performClick()
        composeTestRule.onNode(femaleChip).assertIsSelected()
        composeTestRule.onNode(nextBtn).assertIsEnabled()
        composeTestRule.onNode(nextBtn).performClick()
        composeTestRule.onNodeWithText("Page 2/3")
            .assertExists("Should have navigated to Page 2/3.")
    }

    @Test
    fun patientRegistrationStepOne_verify_clear_icon_click() {
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(clearIcon, true).performClick()
        composeTestRule.onNode(titleMyPatients)
            .assertExists("Should be navigated to My Patients screen.")
    }

    @Test
    fun patientRegistrationStepOne_enter_0_in_day_field_dob(){
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(day).performTextInput("0")
        composeTestRule.onNode(day).assertTextEquals("0", "Day", "Enter valid day between 1 and 31.", includeEditableText = true)
    }

    @Test
    fun patientRegistrationStepOne_alphabet_in_day_field_dob(){
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(day).performTextInput("a")
        composeTestRule.onNode(day).assertTextEquals("", "Day", includeEditableText = true)
    }

    @Test
    fun patientRegistrationStepOne_special_char_in_day_field_dob(){
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(day).performTextInput("@")
        composeTestRule.onNode(day).assertTextEquals("", "Day", includeEditableText = true)
    }

    @Test
    fun patientRegistrationStepOne_click_on_month_drop_down(){
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(month).performClick()
        composeTestRule.onNodeWithText("January").assertExists("Drop down should have opened and January should be in the list.")
        composeTestRule.onNodeWithText("February").assertExists("February should be in the list..")
        composeTestRule.onNodeWithText("March").assertExists("March should be in the list..")
        composeTestRule.onNodeWithText("April").assertExists("April should be in the list..")
        composeTestRule.onNodeWithText("May").assertExists("May should be in the list..")
        composeTestRule.onNodeWithText("June").assertExists("June should be in the list..")
        composeTestRule.onNodeWithText("July").assertExists("July should be in the list..")
        composeTestRule.onNodeWithText("August").assertExists("August should be in the list..")
        composeTestRule.onNodeWithText("September").assertExists("September should be in the list..")
        composeTestRule.onNodeWithText("October").assertExists("October should be in the list..")
        composeTestRule.onNodeWithText("November").assertExists("November should be in the list..")
        composeTestRule.onNodeWithText("December").assertExists("December should be in the list..")
    }

    @Test
    fun patientRegistrationStepOne_select_feb_and_enter_0_in_day(){
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(month).performClick()
        composeTestRule.onNodeWithText("February").performClick()
        composeTestRule.onNode(day).performTextInput("0")
        composeTestRule.onNode(day).assertTextEquals("0", "Day", "Enter valid day between 1 and 29.", includeEditableText = true)
    }

    @Test
    fun patientRegistrationStepOne_enter_31_in_day_check_months_list(){
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(day).performTextInput("31")
        composeTestRule.onNode(month).performClick()
        composeTestRule.onNodeWithText("January").assertExists("January should be in the list.")
        composeTestRule.onNodeWithText("March").assertExists("March should be in the list..")
        composeTestRule.onNodeWithText("May").assertExists("May should be in the list..")
        composeTestRule.onNodeWithText("July").assertExists("July should be in the list..")
        composeTestRule.onNodeWithText("August").assertExists("August should be in the list..")
        composeTestRule.onNodeWithText("October").assertExists("October should be in the list..")
        composeTestRule.onNodeWithText("December").assertExists("December should be in the list..")
    }

    @Test
    fun patientRegistrationStepOne_enter_30_in_day_check_months_list(){
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(day).performTextInput("30")
        composeTestRule.onNode(month).performClick()
        composeTestRule.onNodeWithText("January").assertExists("January should be in the list.")
        composeTestRule.onNodeWithText("March").assertExists("March should be in the list..")
        composeTestRule.onNodeWithText("April").assertExists("April should be in the list..")
        composeTestRule.onNodeWithText("May").assertExists("May should be in the list..")
        composeTestRule.onNodeWithText("June").assertExists("June should be in the list..")
        composeTestRule.onNodeWithText("July").assertExists("July should be in the list..")
        composeTestRule.onNodeWithText("August").assertExists("August should be in the list..")
        composeTestRule.onNodeWithText("September").assertExists("September should be in the list..")
        composeTestRule.onNodeWithText("October").assertExists("October should be in the list..")
        composeTestRule.onNodeWithText("November").assertExists("November should be in the list..")
        composeTestRule.onNodeWithText("December").assertExists("December should be in the list..")
    }

    @Test
    fun patientRegistrationStepOne_enter_29_in_day_check_months_list(){
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(day).performTextInput("29")
        composeTestRule.onNode(month).performClick()
        composeTestRule.onNodeWithText("January").assertExists("January should be in the list.")
        composeTestRule.onNodeWithText("February").assertExists("February should be in the list.")
        composeTestRule.onNodeWithText("March").assertExists("March should be in the list..")
        composeTestRule.onNodeWithText("April").assertExists("April should be in the list..")
        composeTestRule.onNodeWithText("May").assertExists("May should be in the list..")
        composeTestRule.onNodeWithText("June").assertExists("June should be in the list..")
        composeTestRule.onNodeWithText("July").assertExists("July should be in the list..")
        composeTestRule.onNodeWithText("August").assertExists("August should be in the list..")
        composeTestRule.onNodeWithText("September").assertExists("September should be in the list..")
        composeTestRule.onNodeWithText("October").assertExists("October should be in the list..")
        composeTestRule.onNodeWithText("November").assertExists("November should be in the list..")
        composeTestRule.onNodeWithText("December").assertExists("December should be in the list..")
    }

    @Test
    fun patientRegistrationStepOne_enter_30_and_select_January_and_check_error_msg(){
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(day).performTextInput("30")
        composeTestRule.onNode(month).performClick()
        composeTestRule.onNodeWithText("January").performClick()
        composeTestRule.onNode(day).assertTextEquals("30", "Day", includeEditableText = true)
    }

    @Test
    fun patientRegistrationStepOne_enter_less_than_1900_in_year(){
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(year).performTextInput("1800")
        composeTestRule.onNode(year).assertTextEquals("1800", "Year", "Enter valid year between 1900 and 2023", includeEditableText = true)
    }

    @Test
    fun patientRegistrationStepOne_enter_more_than_2023_in_year(){
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(year).performTextInput("2025")
        composeTestRule.onNode(year).assertTextEquals("2025", "Year", "Enter valid year between 1900 and 2023", includeEditableText = true)
    }

    @Test
    fun patientRegistrationStepOne_check_value_of_country_code(){
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(countryCode).assertTextEquals("IND (+91)", includeEditableText = true)
    }

    @Test
    fun patientRegistrationStepOne_enter_special_characters_in_phone_number_field(){
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(phoneNo).performTextInput("@#$")
        composeTestRule.onNode(phoneNo).assertTextEquals("", "Enter Phone Number", "Enter Valid Input", includeEditableText = true)
    }

    @Test
    fun patientRegistrationStepOne_enter_alphanumeric_in_phone_number_field(){
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(phoneNo).performTextInput("abc123")
        composeTestRule.onNode(phoneNo).assertTextEquals("", "Enter Phone Number", "Enter Valid Input", includeEditableText = true)
    }

    @Test
    fun patientRegistrationStepOne_enter_free_text_in_phone_number_field(){
        composeTestRule.onNode(addPatientText, useUnmergedTree = true).performClick()
        composeTestRule.onNode(phoneNo).performTextInput("abc123%$#")
        composeTestRule.onNode(phoneNo).assertTextEquals("", "Enter Phone Number", "Enter Valid Input", includeEditableText = true)
    }

    @Test
    fun patientRegistrationStepOne_enter_numbers_in_phone_number_field(){
